--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Food</title>
     <link rel="icon" href="image/food logo.jpg">
-    <link rel="stylesheet" href="food.css">
+    <link rel="stylesheet" href="style.css">
     </head>  
     <header align="center">
 <a href="https://www.foodfood.com/">Home</a>
